# AndroidP7zip

./: .gitignore  README.md  build.gradle  settings.gradle
MyZipTest/: .project  AndroidManifest.xml
MyZipTest/jni/: Android.mk
MyZipTest/jni/p7zip/: JniWrapper.cpp  JniWrapper.h  com_hu_p7zip_ZipUtils.cpp
MyZipTest/jni/p7zip/C/: Types.h
MyZipTest/res/layout/: activity_command.xml  activity_compress.xml  activity_decompress.xml  activity_file_choose.xml  activity_help.xml  activity_main.xml  file_list_item.xml
MyZipTest/res/values/: strings.xml
P7zip/: .cproject  .project  AndroidManifest.xml
P7zip/assets/help/commands/: add.htm  bench.htm  extract.htm  extract_full.htm  hash.htm  update.htm
P7zip/assets/help/switches/: index.htm  method.htm  scrc.htm  type.htm
P7zip/jni/: Application.mk
P7zip/jni/p7zip/: Android.mk
P7zip/jni/p7zip/p7zip_9.38.1/: ChangeLog  README
P7zip/res/layout/: activity_command.xml  activity_decompress.xml  activity_file_choose.xml  activity_help.xml  activity_main.xml
P7zip/res/values/: strings.xml
app/: .gitignore  build.gradle  demokey.jks  proguard-rules.pro
app/src/main/: AndroidManifest.xml
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt
gradle/wrapper/: gradle-wrapper.properties
libp7zip/: .gitignore  build.gradle
libp7zip/src/main/: AndroidManifest.xml
libp7zip/src/main/cpp/: CMakeLists.txt  ndkhelper.h  p7zip.cpp
libp7zip/src/main/cpp/cmd/: command.cpp  command.h
libp7zip/src/main/cpp/str2args/: str2args.cpp  str2args.h
libp7zip/src/main/jni/: ndkhelper.h  p7zip.cpp
(+244 files in other folders)
